added image and minor tweaks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Student Bio</h1>
   <p><h2>Brandon Hoffman</h2></p>
-  <img src="">
+  <img src="image.jpg" width="200" height="200">
   <br>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec lectus dignissim, vehicula libero rutrum, pellentesque
     mi. Cras gravida diam sit amet diam ultrices ultrices ut at odio. Aenean sit amet aliquet mi. Donec ut mattis lorem.
@@ -27,7 +27,7 @@
     <h1>Contact Info</h1>
     <ul>
       <li>Email: <a href="mailto:brandonhoffman@gmail.com">brandonhoffmail@gmail.com</a></li>
-      <li>Github: <a href="https://github.com/modemtones"></a>modemtones</li>
+      <li>Github: <a href="https://github.com/modemtones">modemtones</a></li>
       <li>Portfolio: <a href="#">Coming Soon</a></li>
     </ul>
 </body>
