--- a/index.html
+++ b/index.html
@@ -2,32 +2,43 @@
 
 <head>
   <title>Student Bio</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-  <h1>Student Bio</h1>
-  <p><h2>Brandon Hoffman</h2></p>
-  <img src="image.jpg" width="200" height="200">
-  <br>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec lectus dignissim, vehicula libero rutrum, pellentesque
-    mi. Cras gravida diam sit amet diam ultrices ultrices ut at odio. Aenean sit amet aliquet mi. Donec ut mattis lorem.
-    Donec nec scelerisque neque, eu vulputate enim. Nunc porttitor placerat tellus, id congue mauris. Praesent metus lacus,
-    scelerisque sed urna sed, malesuada accumsan lorem. Nullam scelerisque risus non tortor pulvinar, at bibendum nisl egestas.
-    Donec id finibus dui, eget fringilla sem. Ut cursus orci vel porta iaculis.</p>
+  <header>
+    <h1>Student Bio</h1>
+  </header>
 
-  <p>Quisque mollis faucibus elit, sed tempus lectus dignissim nec. Fusce sem sapien, varius ac cursus sit amet, suscipit et
-    sapien. Donec commodo tristique est id interdum. Suspendisse efficitur erat accumsan orci mollis, vel aliquet elit fermentum.
-    Maecenas quis dolor accumsan, efficitur neque ac, pretium sapien. Morbi blandit tempus purus vel sagittis. Orci varius
-    natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean tortor nunc, suscipit sit amet tempus
-    ac, interdum vel leo. Proin cursus justo id tellus convallis malesuada. Proin ultrices diam dolor, a varius mi luctus
-    eget. Fusce gravida diam elit, ac viverra velit venenatis et. Pellentesque mi nisi, dapibus a mattis vel, consectetur
-    quis nulla. Pellentesque pulvinar tempor nunc, at fermentum ex facilisis quis. Morbi scelerisque commodo felis sit amet
-    dapibus.</p>
-    <br>
-    <h1>Contact Info</h1>
-    <ul>
-      <li>Email: <a href="mailto:brandonhoffman@gmail.com">brandonhoffmail@gmail.com</a></li>
-      <li>Github: <a href="https://github.com/modemtones">modemtones</a></li>
-      <li>Portfolio: <a href="#">Coming Soon</a></li>
-    </ul>
+  <div class="container">
+    <section id="main-bio">
+      <h2>Brandon Hoffman</h2>
+      <img src="image.jpg" alt="Brandon Hoffman" id="bio-image">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nec lectus dignissim, vehicula libero rutrum, pellentesque
+        mi. Cras gravida diam sit amet diam ultrices ultrices ut at odio. Aenean sit amet aliquet mi. Donec ut mattis lorem.
+        Donec nec scelerisque neque, eu vulputate enim. Nunc porttitor placerat tellus, id congue mauris. Praesent metus lacus,
+        scelerisque sed urna sed, malesuada accumsan lorem. Nullam scelerisque risus non tortor pulvinar, at bibendum nisl egestas.
+        Donec id finibus dui, eget fringilla sem. Ut cursus orci vel porta iaculis.</p>
+
+      <p>Quisque mollis faucibus elit, sed tempus lectus dignissim nec. Fusce sem sapien, varius ac cursus sit amet, suscipit et
+        sapien. Donec commodo tristique est id interdum. Suspendisse efficitur erat accumsan orci mollis, vel aliquet elit fermentum.
+        Maecenas quis dolor accumsan, efficitur neque ac, pretium sapien. Morbi blandit tempus purus vel sagittis. Orci varius
+        natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean tortor nunc, suscipit sit amet tempus
+        ac, interdum vel leo. Proin cursus justo id tellus convallis malesuada. Proin ultrices diam dolor, a varius mi luctus
+        eget. Fusce gravida diam elit, ac viverra velit venenatis et. Pellentesque mi nisi, dapibus a mattis vel, consectetur
+        quis nulla. Pellentesque pulvinar tempor nunc, at fermentum ex facilisis quis. Morbi scelerisque commodo felis sit amet
+        dapibus.</p>
+    </section>
+
+    <section id="contact-info">
+      <h2>Contact Info</h2>
+      <ul>
+        <li>Email: <a href="mailto:brandonhoffman@gmail.com">brandonhoffmail@gmail.com</a></li>
+        <li>Github: <a href="https://github.com/modemtones">modemtones</a></li>
+        <li>Portfolio: <a href="#">Coming Soon</a></li>
+      </ul>
+    </section>
+  </div>
+
 </body>
+</html>
