--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <section id="contact-info">
       <h2>Contact Info</h2>
       <ul>
-        <li>Email: <a href="mailto:brandonhoffman@gmail.com">brandonhoffmail@gmail.com</a></li>
-        <li>Github: <a href="https://github.com/modemtones">modemtones</a></li>
-        <li>Portfolio: <a href="#">Coming Soon</a></li>
+        <li><strong>Email:</strong> <a href="mailto:brandonhoffman@gmail.com">brandonhoffmail@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/modemtones">modemtones</a></li>
+        <li><strong>Portfolio:</strong> <a href="#">Coming Soon</a></li>
       </ul>
     </section>
   </div>
